# oxidant

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  analysis.md  demand.md  pyproject.toml  updates.md
src/: field_mapping.rs  lib.rs  lib_backup.rs  main.rs
src/ape/: mod.rs
src/cli/: commands.rs  config.rs  mod.rs  output.rs
src/flac/: metadata.rs  mod.rs  picture.rs  vorbis.rs
src/id3/: frames.rs  mod.rs  v1.rs  v2.rs
src/mp4/: mod.rs
src/ogg/: mod.rs  page.rs  vorbis.rs
src/opus/: mod.rs
src/utils/: encoding.rs  io.rs  mod.rs
