[package]
name = "oxidant"
version = "0.5.0"
edition = "2021"
authors = ["xwsjjctz <xwsjjctz@icloud.com>"]
description = "A high-performance audio metadata library supporting ID3, FLAC, OGG, OPUS, MP4, and APE formats"
repository = "https://github.com/xwsjjctz/oxidant"
license = "MIT"
keywords = ["audio", "metadata", "id3", "flac", "music", "tags"]
categories = ["multimedia::audio", "parser"]

[lib]
name = "oxidant"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oxidant"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
glob = "0.3"

[features]
default = []
python = ["pyo3"]

# CLI-only dependencies (not required for Python bindings)
[dev-dependencies]
# For testing the Rust library
mockito = "1.0"

# Python-specific configuration
[package.metadata.maturin]
python-source = "python"
module-name = "oxidant"

# The name of the rust wheel package (required)
name = "oxidant"
