[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oxidant"
version = "0.1.0"
description = "A high-performance audio metadata library for ID3 and FLAC formats"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["audio", "metadata", "id3", "flac", "mp3"]

[tool.maturin]
features = ["pyo3/extension-module"]